# xarray-validate

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  conftest.py  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  lint.yml  release.yml
docs/: api.rst  conf.py  getting-started.md  getting_started.rst  index.md  index.rst  reference.md  requirements.txt
src/xarray_validate/: __init__.py  base.py  components.py  dataarray.py  dataset.py  types.py
tests/: test_components.py  test_core.py  test_dataarray.py  test_dataset.py
