[project]
name = "xarray-validate"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Vincent Leroy", email = "vincent.leroy@rayference.eu" }]
dependencies = ["xarray>=2024.11.0", "numpy>=2.1.3"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.html]
directory = "./reports/coverage/html"

[tool.coverage.paths]
equivalent = ["src/", "__pypackages__/"]

[tool.coverage.report]
omit = ["src/*/__init__.py", "src/*/_version.py"]
precision = 2
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
parallel = true
source = ["src/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".env", "dist", "__pypackages__"]
python_files = ["test_*.py", "*_test.py", "tests.py"]

[tool.rye]
managed = true
dev-dependencies = [
  "pytest>=8.3.4",
  "dask>=2024.12.0",
  "jsonschema>=4.23.0",
  "ipykernel>=6.29.5",
  "rich>=13.9.4",
  "ruamel-yaml>=0.18.6",
  "setuptools>=75.6.0",
  "pytest-cov>=6.0.0",
]

[tool.rye.scripts]
test = "pytest"
test-cov = "pytest --cov=src"
test-cov-report = "pytest --cov=src --cov-report=html"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/xarray_validate"]
