[project]
name = "xarray-validate"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Vincent Leroy", email = "vincent.leroy@rayference.eu" }]
dependencies = ["attrs", "numpy", "xarray"]
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
dask = ["dask"]
yaml = ["ruamel-yaml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.html]
directory = "./reports/coverage/html"

[tool.coverage.json]
output = "./reports/coverage/coverage.json"

[tool.coverage.paths]
equivalent = ["src/", "__pypackages__/"]

[tool.coverage.report]
omit = ["src/*/__init__.py", "src/*/_version.py"]
precision = 2
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
parallel = true
source = ["src/"]

[tool.pytest.ini_options]
addopts = "--doctest-glob='*.rst'"
testpaths = ["tests", "docs"]
norecursedirs = [".git", ".env", "dist", "__pypackages__"]
python_files = ["test_*.py", "*_test.py", "tests.py"]

[tool.ruff.lint]
select = ["I", "E", "F"]

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"

[tool.rye]
managed = true
dev-dependencies = [
  "autodocsumm>=0.2.14",
  "furo",
  "pytest-cov",
  "pytest",
  "rich",
  "setuptools", # Required for PyCharm to be happy
  "sphinx-autobuild>=2021",
  "sphinx-autodoc-typehints>=2",
  "sphinx-copybutton>=0.5.2",
  "sphinx>=7",
  "xdoctest",
]

[tool.rye.scripts]
docs = { cmd = "sphinx-build -b html docs docs/_build/html" }
docs-clean = { cmd = "rm -rf docs/_build/" }
docs-serve = { cmd = "sphinx-autobuild docs docs/_build/html" }
test = "pytest"
test-cov = "pytest --cov=src"
test-cov-report = "pytest --cov=src --cov-report=html"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/xarray_validate"]
